Fix font size on recipe-list on mobile

--- a/brew_wizard_ui/src/app/components/app-header/app-header.component.scss
+++ b/brew_wizard_ui/src/app/components/app-header/app-header.component.scss
@@ -16,6 +16,10 @@ nav {
   background-color: $primary;
 }
 
+.navbar {
+
+}
+
 .navbar-brand {
   padding-right: 30px;
 }
