--- a/brew_wizard_ui/src/app/recipes/recipe-list/recipe-list.component.scss
+++ b/brew_wizard_ui/src/app/recipes/recipe-list/recipe-list.component.scss
@@ -76,7 +76,7 @@
 
 .mini-row {
   h5 {
-    font-size: smaller;
+
     margin-bottom: -7px;
   }
   height: 25px;
@@ -120,10 +120,10 @@
 
   .mini-row {
     h5 {
-      font-size: smaller;
+      font-size: medium;
       margin-bottom: -5px;
     }
-    height: 20px;
+    /* height: 20px; */
   }
   
   .tiny-row {
